# gainmap-spec-status

./: .gitignore  README.md  REVIEW-2026-06-11-forever-api.md  TODO.md
audit/: compliance-matrix.md  encoders.md  heic.md  ultrahdr.md  zenavif.md  zencodec.md  zenjpeg.md  zenjxl.md  zenpng-zentiff.md  zenraw.md  zentone.md
specs/adobe/: status.md
specs/apple/: status.md
specs/avif-heif/: status.md
specs/iso-21496-1/: apply-math-and-banding.md  extracted.md  status.md
specs/itu-r-bt2408-bt2390/: bt2446.md  status.md
specs/jxl/: status.md
specs/os-rendering/: status.md
specs/png/: status.md
specs/tiff-dng/: status.md
test-vectors/: README.md  manifest.toml
tools/: gen-iso21496.py  gen-jhgm-golden.py  gen-manifest.py
tools/corpus-test/: Cargo.toml
tools/corpus-test/src/: main.rs
